# TP-SO

./: 2146.txt  2149.txt  2152.txt  2155.txt  2257.txt  2260.txt  2263.txt  2265.txt  2267.txt  2281.txt  2293.txt  2620.txt  2640.txt  2681.txt  CMakeLists.txt  Makefile  README.md  TP_SO.pdf:Zone.Identifier  a.out  log.txt  mon  monitor  saida.txt  tracer
PIDS_folder/: 26719.txt  26839.txt  2796.txt
SO /: teste202021.c
SO /ficha 1/: person.c  person.h
SO /ficha2/: ex1.c
SO /ficha3/: EXEC  a.out  ex1.c
SO /ficha3/EXEC.dSYM/Contents/Resources/DWARF/: EXEC
SO /ficha3/a.out.dSYM/Contents/Resources/DWARF/: a.out
SO /ficha4/: TESTE  ficha4.c
SO /ficha4/TESTE.dSYM/Contents/: Info.plist
SO /ficha4/TESTE.dSYM/Contents/Resources/DWARF/: TESTE
SO /ficha6/: ex1.c  ex2.c  ex4  ex4.c  ex5.c
SO /guiao5/: Ex1  Make  Read  Write  ex1Make.c  ex1Read.c  ex1Write.c
SO /guiao5/Ex2/: Cliente  Servidor  cliente.c  servidor.c
SO /guiao6/: Apontamentos.md  Ex1  Ex2  Ex3  Ex4  Ex5  ex1.c  ex2.c  ex3.c  ex4.c  ex5.c  ex6.c  saida.txt
include/: monitor.h  monitor.h.gch  tracer.h  tracer.h.gch
src/: monitor.c  monitor.h  tracer.c
